feat: Subject Service Impl